<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical"
        tools:context=".HabitAdditionActivity">

        <EditText
            android:id="@+id/habitTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/habitName" />

        <EditText
            android:id="@+id/habitDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/habitDescription" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/priority"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/habitPriority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/habitType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/goodHabit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/goodHabit" />

            <RadioButton
                android:id="@+id/badHabit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/badHabit" />

        </RadioGroup>

        <EditText
            android:id="@+id/repetitionsCount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/repetitionsCount"
            android:inputType="number" />

        <EditText
            android:id="@+id/periodicity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/periodicity"
            android:inputType="number" />

        <Button
            android:id="@+id/habitSaveButton"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/habitSaveButton" />

    </LinearLayout>
</ScrollView>
